--- a/UWPDebugging/Pages/SlownessPatternPage.xaml
+++ b/UWPDebugging/Pages/SlownessPatternPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UWPDebugging.Pages"
+    xmlns:localcontrols="using:UWPDebugging.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -11,14 +12,35 @@
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="ResourceDictionary.xaml"/>
+                <!--<ResourceDictionary Source="ResourceDictionary.xaml"/>-->
+                <ResourceDictionary Source="../Dictionary1.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <SolidColorBrush x:Key="TransparentBlue" Color="#00b0f0" Opacity="0.6" />
         </ResourceDictionary>
-    </Page.Resources>
 
-    <StackPanel VerticalAlignment="Center">
-        <Button Content="Hang 1 Click" Click="Button_Click" Background="Red" Margin="20"></Button>
-        <Button Content="Slow Click" Click="Button_Click_1"  Background="Red" Margin="20"></Button>
-        <Button Content="Hang 2 Click" Click="Button_Click_2" Background="Red" Margin="20"></Button>
-    </StackPanel>
+    </Page.Resources>
+    <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto">
+    <StackPanel x:Name="panel" VerticalAlignment="Stretch" Opacity="1" Background="{StaticResource SystemControlChromeMediumLowAcrylicWindowMediumBrush}">
+        <Button x:Name="StartAnimation" Content="StartAnimation" Click="StartAnimation_Click"  Margin="20"></Button>
+        <Button Content="Hang 1 Click" Click="Button_Click"  Margin="20"></Button>
+        <Button Content="Slow Click" Click="Button_Click_1"   Margin="20"></Button>
+        <Button Content="Hang 2 Click" Click="Button_Click_2"  Margin="20"></Button>
+        <Button Content="Close View"  Margin="20" Click="Button_Click_3"></Button>
+        <Button Content="Change View"  Margin="20" Click="Button_Click_6"></Button>
+        <ComboBox Margin="20" x:Name="viewOption">
+            <ComboBox.Items>
+                <ComboBoxItem>Default</ComboBoxItem>
+                <ComboBoxItem>CompactOverlay</ComboBoxItem>
+                <ComboBoxItem>Spanning</ComboBoxItem>
+            </ComboBox.Items>
+        </ComboBox>
+        <Button Content="Minimize View"  Margin="20" Click="Button_Click_5"></Button>
+        <Button Content="Background Img"  Margin="20" Click="Button_Click_4"></Button>
+        <ColorPicker HorizontalAlignment="Left" ColorSpectrumShape="Ring"></ColorPicker>
+
+        <localcontrols:ExpandingPanel x:Name="expandingPanel" Grid.ColumnSpan="4" Grid.RowSpan="18" Grid.Row="1" Height="950" VerticalAlignment="Top"/>
+
+       </StackPanel>
+
+    </ScrollViewer>
 </Page>
