--- a/UWPDebugging/Pages/FileAudioGraph.xaml
+++ b/UWPDebugging/Pages/FileAudioGraph.xaml
@@ -14,7 +14,7 @@
             <Button x:Name="Start" Content="Start"  Margin="20" Click="Start_Click"></Button>
             <Button x:Name="Stop" Content="Stop" Margin="20" Click="Stop_Click"></Button>
             <Button x:Name="Loop" Content="Loop" Margin="20" Click="Loop_Click"></Button>
-
+            <TextBox x:Name="LogPath" Margin="20" ></TextBox>
             <localcontrols:ExpandingPanel x:Name="expandingPanel"  Height="950" VerticalAlignment="Top"/>
             <localcontrols:CompositionPanel x:Name="compositionPanel" Height="950" VerticalAlignment="Top"/>
             
