--- a/UWPDebugging/Pages/OOPBackgroundtaskPage.xaml
+++ b/UWPDebugging/Pages/OOPBackgroundtaskPage.xaml
@@ -10,6 +10,8 @@
 
     <StackPanel>
         <Button x:Name="RegisterBGTask" Content="RegisterBGTask" Click="RegisterBGTask_Click" Margin="0,10,0,0"/>
+        <Button x:Name="InProBGTask" Content="RegisterInProBGTask" Click="InProBGTask_Click" Margin="0,10,0,0" />
         <Button x:Name="UnregisterBGTask" Content="UnregisterBGTask" Click="UnregisterBGTask_Click" Margin="0,10,0,0"/>
+        <TextBlock x:Name="BGTaskList"></TextBlock>
     </StackPanel>
 </Page>
